Allow child tags in tile to wrap. fixes flarum/core#613

--- a/extensions/tags/less/forum/TagTiles.less
+++ b/extensions/tags/less/forum/TagTiles.less
@@ -105,7 +105,7 @@
   font-size: 12px;
 
   a {
-    margin-right: 15px;
+    margin-right: 10px;
   }
 }
 .TagTile-lastDiscussion {
